--- a/style/style.css
+++ b/style/style.css
@@ -4,4 +4,43 @@ body {
   background-color: #FFD845;
   width: 100%;
 }
+
+.section-1 img {
+  width: 610px;
+  height: 225px;
+}
+
+.section-1 select {
+  width: 260px;
+  border-radius: 15px;
+  border: 2px solid #000000;
+}
+
+.section-1 input {
+  width: 300px;
+  border-radius: 15px;
+  border: 2px solid #000000;
+}
+
+.section-1 input::-webkit-input-placeholder {
+  color: #000000;
+}
+
+.section-1 input:-ms-input-placeholder {
+  color: #000000;
+}
+
+.section-1 input::-ms-input-placeholder {
+  color: #000000;
+}
+
+.section-1 input::placeholder {
+  color: #000000;
+}
+
+.section-1 button {
+  width: 200px;
+  border-radius: 15px;
+  border: 2px solid #000000;
+}
 /*# sourceMappingURL=style.css.map */
