section-2 qo`shildi

--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,10 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: #FFD845;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .section-1 img {
@@ -42,5 +46,85 @@ body {
   width: 200px;
   border-radius: 15px;
   border: 2px solid #000000;
+}
+
+.section-2 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 423px;
+  gap: 30px;
+}
+
+@media (max-width: 560px) {
+  .section-2 {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-auto-rows: 423px;
+    gap: 15px;
+  }
+}
+
+.section-2 #div-1 {
+  padding-top: 60px;
+  background: #FFFFFF;
+  border: 2px solid #000000;
+  border-radius: 20px;
+  position: relative;
+}
+
+.section-2 #div-1 span {
+  position: absolute;
+  bottom: 166px;
+  display: block;
+  height: 2px;
+  width: 100%;
+  background-color: black;
+}
+
+.section-2 #div-1 .bottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 166px;
+  padding: 15px;
+}
+
+.section-2 #div-1 .bottom img {
+  margin-top: -10px;
+}
+
+.section-2 #div-1 .hayvon {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.section-2 #div-1 .p-1 {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+
+.section-2 #div-1 .p-2 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  color: #000000;
+  margin-top: -20px;
+  margin-left: -5px;
+}
+
+@media (max-width: 560px) {
+  .section-1 img {
+    width: 300px;
+    height: 100px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
