--- a/style/style.scss
+++ b/style/style.scss
@@ -4,6 +4,9 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color:#FFD845;
     width: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .section-1 {
@@ -32,5 +35,83 @@ body {
         width: 200px;
         border-radius: 15px;
         border: 2px solid #000000;
+    }
+}
+
+.section-2 {   
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 423px;
+    gap: 30px;
+
+    @media (max-width: 560px) {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-rows: 423px;
+        gap: 15px;
+    }
+
+
+    #div-1 {
+        padding-top: 60px;
+        // Width: 307px;
+        // Height: 423px;
+        background: #FFFFFF;
+        border: 2px solid #000000;
+        border-radius: 20px;
+        position: relative;
+
+        span {
+            position: absolute;
+            bottom: 166px;
+            display: block;
+            height: 2px;
+            width: 100%;
+            background-color: black;
+            
+        }
+
+        .bottom {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 166px;
+            padding: 15px;
+            
+            img {
+            margin-top: -10px;
+        }
+        }
+
+
+        .hayvon {
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }        
+
+        .p-1 {
+            font-weight: bold;
+            font-size: 24px;
+            line-height: 28px;
+            color: #000000;
+        }
+
+        .p-2 {
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 23px;
+            color: #000000;
+            margin-top: -20px;
+            margin-left: -5px;
+        }
+    } 
+}
+
+@media (max-width: 560px) {
+    .section-1 img {
+        width: 300px;
+        height: 100px;
     }
 }
