--- a/style/style.css
+++ b/style/style.css
@@ -61,9 +61,10 @@ body {
   .section-2 {
     display: -ms-grid;
     display: grid;
+    padding: 0 30px;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    grid-auto-rows: 423px;
+    grid-auto-rows: 300x;
     gap: 15px;
   }
 }
