--- a/style/style.scss
+++ b/style/style.scss
@@ -46,8 +46,9 @@ body {
 
     @media (max-width: 560px) {
         display: grid;
+        padding: 0 30px;
         grid-template-columns: 1fr;
-        grid-auto-rows: 423px;
+        grid-auto-rows: 300x;
         gap: 15px;
     }
 
